--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Snake Game</title>
-    <link type="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <h1>Snake Game</h1>
